fix: alignement

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -433,10 +433,11 @@
               }
 
               .bot-button-screen {
+                align-items: center;
                 border: none;
                 border-radius: 8px;
                 cursor: pointer;
-                display: inline-block;
+                display: flex;
                 height: 37px;
                 padding: 8px;
                 width: 30%;
